apps/media/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: linuxserver/sonarr:4.0.11
          name: sonarr
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /tv
              name: tv
            - mountPath: /downloads
              name: downloads
          ports:
            - name: sonarr
              containerPort: 7878
              protocol: TCP
      volumes:
        - name: tv
          persistentVolumeClaim:
            claimName: tv
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: arr-init-config
          configMap:
            name: arr-init-config
      restartPolicy: Always
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: sonarr-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: synology-iscsi-storage
        resources:
          requests:
            storage: 20Gi
