apps/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8989
      targetPort: 8989
